fix: select dropdown autocomplete 下拉样式调整
Change-Id: I7de43d34c69a272766217edae74eed54c6824289

--- a/packages/ui/dropdown/src/index.less
+++ b/packages/ui/dropdown/src/index.less
@@ -17,6 +17,16 @@
             margin: 0;
         }
     }
+
+    .@{ant-prefix}-dropdown-menu-item-active:not(.@{ant-prefix}-dropdown-menu-item-disabled) {
+        &:hover {
+            background-color: var(--select-item-active-bg);
+        }
+
+        &:active {
+            background-color: var(--color-gray-4);
+        }
+    }
 }
 
 .osui-menu-submenu {
