--- a/packages/ui/select/src/index.less
+++ b/packages/ui/select/src/index.less
@@ -58,6 +58,7 @@
 
     // 只有在arrow后面时，偏移30px
     .@{ant-prefix}-select-arrow + .@{ant-prefix}-select-clear {
+        top: var(--select-clear-icon-top);
         right: var(--select-clear-icon-right);
         opacity: var(--select-clear-icon-opacity);
     }
@@ -74,6 +75,7 @@
         }
     }
 
+    &.@{ant-prefix}-select-focused,
     &:hover {
         .@{ant-prefix}-select-clear {
             opacity: 1 !important; // hover时显示clearIcon，符合antd的效果，也符合osui需要效果
