fix: table expand icon 修复
Change-Id: Iccf46fe3b7e8c9283870b91ba6f0e855aabcc65a

--- a/packages/ui/table/src/index.less
+++ b/packages/ui/table/src/index.less
@@ -85,5 +85,12 @@
             background-color: var(--theme-disabled-bg-color);
             border-color: var(--theme-border-color-disabled);
         }
+
+        .@{ant-prefix}-table-cell-with-append {
+            .osui-icon {
+                float: left;
+                margin-right: 4px;
+            }
+        }
     }
 }
