fix: input去掉select时高亮
Change-Id: I83ecf575b3972b6007e1bf38b24e06d619533940

--- a/packages/ui/input/src/index.less
+++ b/packages/ui/input/src/index.less
@@ -1,24 +1,18 @@
 @osui-input-class-prefix: osui-input;
 
 .@{osui-input-class-prefix} {
-    .@{ant-prefix}-select-single.@{ant-prefix}-select-open .@{ant-prefix}-select-selection-item {
-        color: var(--theme-primary-color-active);
-    }
-
     .@{ant-prefix}-input-group-addon {
         // affix select
         .osui-select {
             padding-top: 2px;
             padding-bottom: 2px;
+        }
 
-            &.@{ant-prefix}-select-single.@{ant-prefix}-select-open .@{ant-prefix}-select-selection-item {
-                color: var(--theme-primary-color-active);
-            }
-
-            &.@{ant-prefix}-select-focused {
-                .@{ant-prefix}-select-selection-item {
-                    color: var(--theme-primary-color-active);
-                }
+        .@{ant-prefix}-select-focused,
+        .@{ant-prefix}-select-open {
+            // focus selector color
+            .@{ant-prefix}-select-selector {
+                color: var(--theme-text-color);
             }
         }
     }
