--- a/packages/ui-theme/icloud-theme/patches/antd-vars-patch.less
+++ b/packages/ui-theme/icloud-theme/patches/antd-vars-patch.less
@@ -195,8 +195,8 @@
 
 // Tabs
 // ---
-@tabs-active-color: var(--link-color);
-@tabs-hover-color: var(--link-color);
+@tabs-active-color: var(--theme-primary-color-active);
+@tabs-hover-color: var(--theme-primary-color-hover);
 @table-header-color: var(--theme-heading-color);
 @tabs-title-font-size: 14px;
 @tabs-card-horizontal-padding: 11px 10px;
