--- a/packages/ui/tabs/src/index.less
+++ b/packages/ui/tabs/src/index.less
@@ -7,6 +7,14 @@
 
     .@{ant-prefix}-tabs-nav-list {
         color: var(--tabs-tab-color);
+
+        .@{ant-prefix}-tabs-tab {
+            display: flex;
+
+            &-btn {
+                display: flex;
+            }
+        }
     }
 
     .@{ant-prefix}-tabs-tab .@{ant-prefix}icon {
@@ -15,7 +23,8 @@
 
     .@{ant-prefix}-tabs-tab.@{ant-prefix}-tabs-tab-active .@{ant-prefix}-tabs-tab-btn {
         font-weight: normal;
-        text-shadow: 0 0 .25px currentColor;
+        font-family: "PingFangSC-Medium";
+        text-shadow: none;
 
         em.num {
             color: var(--link-color);
