fix: input组合select放小到28px
Change-Id: If8ba3ddbff505dbb8ac5e651ebab732fd2274c92

--- a/packages/ui/input/src/index.less
+++ b/packages/ui/input/src/index.less
@@ -4,8 +4,9 @@
     .@{ant-prefix}-input-group-addon {
         // affix select
         .osui-select {
-            padding-top: 2px;
-            padding-bottom: 2px;
+            .@{ant-prefix}-select-selector {
+                height: 28px; // 有2px的高度会挡住border
+            }
         }
 
         .@{ant-prefix}-select-focused,
