fix: 修复select箭头和清除按钮位置错位的问题
Change-Id: I659ce318d73507df9afa7a2315c703c9ba11ce53

--- a/packages/ui/select/src/index.less
+++ b/packages/ui/select/src/index.less
@@ -33,6 +33,26 @@
         }
     }
 
+    &.ant-select-sm {
+        .@{ant-prefix}-select-arrow {
+            top: var(--select-arrow-top-small);
+        }
+
+        .@{ant-prefix}-select-arrow + .@{ant-prefix}-select-clear {
+            top: var(--select-clear-icon-top-small);
+        }
+    }
+
+    &.ant-select-lg {
+        .@{ant-prefix}-select-arrow {
+            top: var(--select-arrow-top-large);
+        }
+
+        .@{ant-prefix}-select-arrow + .@{ant-prefix}-select-clear {
+            top: var(--select-clear-icon-top-large);
+        }
+    }
+
     &.@{ant-prefix}-select-open .@{ant-prefix}-select-arrow:not(.@{ant-prefix}-select-arrow-loading) > svg {
         transform: var(--select-arrow-open-transform-rotate);
     }
