fix: form svg变成inline的在less中
Change-Id: Id7b694b5acc822f90293fb6e4e29b9aa407dc215

--- a/packages/ui/form/src/index.less
+++ b/packages/ui/form/src/index.less
@@ -19,8 +19,8 @@
             vertical-align: middle;
             background-color: var(--theme-component-bg);
             content: '';
-            -webkit-mask: url('./error.svg') no-repeat 50% 50%;
-            mask: url('./error.svg') no-repeat 50% 50%;
+            -webkit-mask: url('data:image/svg+xml;utf8,<svg viewBox="0 0 1024 1024" xmlns="http://www.w3.org/2000/svg" width="16" height="16"><defs><style/></defs><path d="M421.504 218.56a127.872 127.872 0 01180.992 0l203.008 202.944a127.872 127.872 0 010 181.056L602.496 805.44a127.872 127.872 0 01-180.992 0L218.496 602.56a127.872 127.872 0 010-181.056zM512 640l-6.272.448a42.688 42.688 0 00-36.416 42.24l.512 6.272A42.688 42.688 0 00512 725.312l6.272-.448a42.688 42.688 0 0036.416-42.24l-.512-6.272A42.688 42.688 0 00512 640zm0-341.312l-6.272.448a42.688 42.688 0 00-36.416 42.24v213.312c0 23.552 19.136 42.624 42.688 42.624l6.272-.448a42.688 42.688 0 0036.416-42.24V341.376A42.688 42.688 0 00512 298.688z"/></svg>') no-repeat 50% 50%;
+            mask: url('data:image/svg+xml;utf8,<svg viewBox="0 0 1024 1024" xmlns="http://www.w3.org/2000/svg" width="16" height="16"><defs><style/></defs><path d="M421.504 218.56a127.872 127.872 0 01180.992 0l203.008 202.944a127.872 127.872 0 010 181.056L602.496 805.44a127.872 127.872 0 01-180.992 0L218.496 602.56a127.872 127.872 0 010-181.056zM512 640l-6.272.448a42.688 42.688 0 00-36.416 42.24l.512 6.272A42.688 42.688 0 00512 725.312l6.272-.448a42.688 42.688 0 0036.416-42.24l-.512-6.272A42.688 42.688 0 00512 640zm0-341.312l-6.272.448a42.688 42.688 0 00-36.416 42.24v213.312c0 23.552 19.136 42.624 42.688 42.624l6.272-.448a42.688 42.688 0 0036.416-42.24V341.376A42.688 42.688 0 00512 298.688z"/></svg>') no-repeat 50% 50%;
             -webkit-mask-size: cover;
             mask-size: cover;
         }
@@ -35,8 +35,8 @@
             vertical-align: middle;
             background-color: var(--theme-warning-color);
             content: '';
-            -webkit-mask: url('./warning.svg') no-repeat 50% 50%;
-            mask: url('./warning.svg') no-repeat 50% 50%;
+            -webkit-mask: url('data:image/svg+xml;<svg viewBox="0 0 1024 1024" xmlns="http://www.w3.org/2000/svg" width="16" height="16"><defs><style/></defs><path d="M452.096 239.68c33.024-62.336 86.848-62.592 120 0l264 498.624c33.024 62.336 2.432 113.344-68.544 113.344H256.64c-70.848 0-101.696-50.752-68.544-113.28zm60.032 432.96l-6.336.448a42.688 42.688 0 00-36.352 42.24l.448 6.272a42.688 42.688 0 0042.24 36.352l6.272-.448a42.688 42.688 0 0036.352-42.24l-.448-6.272a42.688 42.688 0 00-42.24-36.352zm0-341.312l-6.336.448a42.688 42.688 0 00-36.352 42.24v213.312c0 23.552 19.136 42.624 42.688 42.624l6.272-.448a42.688 42.688 0 0036.352-42.24V374.016a42.688 42.688 0 00-42.624-42.624z"/></svg>') no-repeat 50% 50%;
+            mask: url('data:image/svg+xml;<svg viewBox="0 0 1024 1024" xmlns="http://www.w3.org/2000/svg" width="16" height="16"><defs><style/></defs><path d="M452.096 239.68c33.024-62.336 86.848-62.592 120 0l264 498.624c33.024 62.336 2.432 113.344-68.544 113.344H256.64c-70.848 0-101.696-50.752-68.544-113.28zm60.032 432.96l-6.336.448a42.688 42.688 0 00-36.352 42.24l.448 6.272a42.688 42.688 0 0042.24 36.352l6.272-.448a42.688 42.688 0 0036.352-42.24l-.448-6.272a42.688 42.688 0 00-42.24-36.352zm0-341.312l-6.336.448a42.688 42.688 0 00-36.352 42.24v213.312c0 23.552 19.136 42.624 42.688 42.624l6.272-.448a42.688 42.688 0 0036.352-42.24V374.016a42.688 42.688 0 00-42.624-42.624z"/></svg>') no-repeat 50% 50%;
             -webkit-mask-size: cover;
             mask-size: cover;
         }
@@ -52,8 +52,8 @@
             background-color: var(--theme-text-color);
             animation: osui-icon-spin 1s infinite linear;
             content: '';
-            -webkit-mask: url('./spinner.svg') no-repeat 50% 50%;
-            mask: url('./spinner.svg') no-repeat 50% 50%;
+            -webkit-mask: url('data:image/svg+xml;<svg class="osui-spin-icon" viewBox="0 0 1024 1024" xmlns="http://www.w3.org/2000/svg" width="16" height="16"><defs><style/></defs><path d="M521.472 64.128L512 64A448 448 0 0064 512a37.12 37.12 0 1074.24 0A373.76 373.76 0 01512 138.24l20.48.576A373.76 373.76 0 01512 885.696 37.12 37.12 0 10512 960a448 448 0 009.472-895.872z"/></svg>') no-repeat 50% 50%;
+            mask: url('data:image/svg+xml;<svg class="osui-spin-icon" viewBox="0 0 1024 1024" xmlns="http://www.w3.org/2000/svg" width="16" height="16"><defs><style/></defs><path d="M521.472 64.128L512 64A448 448 0 0064 512a37.12 37.12 0 1074.24 0A373.76 373.76 0 01512 138.24l20.48.576A373.76 373.76 0 01512 885.696 37.12 37.12 0 10512 960a448 448 0 009.472-895.872z"/></svg>') no-repeat 50% 50%;
             -webkit-mask-size: cover;
             mask-size: cover;
         }
