fix: 修复Treeselect.TreeNode丢失的问题
Change-Id: Ic0146951ec829a6ca3c29c73a51f3265d48719a3

--- a/packages/ui/select/src/index.less
+++ b/packages/ui/select/src/index.less
@@ -33,7 +33,7 @@
         }
     }
 
-    &.ant-select-sm {
+    &.@{ant-prefix}-select-sm {
         .@{ant-prefix}-select-arrow {
             top: var(--select-arrow-top-small);
         }
@@ -43,7 +43,7 @@
         }
     }
 
-    &.ant-select-lg {
+    &.@{ant-prefix}-select-lg {
         .@{ant-prefix}-select-arrow {
             top: var(--select-arrow-top-large);
         }
