fix: 修复less统一使用@{ant-prefix}
Change-Id: Ifd7220a0c978c80379013fe50e1fe1873bf3bb3a

--- a/packages/ui/tabs/src/index.less
+++ b/packages/ui/tabs/src/index.less
@@ -55,11 +55,11 @@
         }
     }
 
-    .ant-tabs-tab + .ant-tabs-tab {
+    .@{ant-prefix}-tabs-tab + .@{ant-prefix}-tabs-tab {
         margin: var(--tabs-horizontal-margin);
     }
 
-    .ant-tabs-tab {
+    .@{ant-prefix}-tabs-tab {
         margin: 0;
     }
 
