--- a/packages/ui/auto-complete/src/index.less
+++ b/packages/ui/auto-complete/src/index.less
@@ -1,7 +1,7 @@
 @osui-auto-complete-class-prefix: osui-auto-complete;
 
 .@{osui-auto-complete-class-prefix}-dropdown {
-    .ant-select-item-option-active:not(.ant-select-item-option-disabled) {
+    .@{ant-prefix}-select-item-option-active:not(.@{ant-prefix}-select-item-option-disabled) {
         &:hover {
             background-color: var(--select-item-active-bg);
         }
