--- a/packages/ui/switch/src/index.less
+++ b/packages/ui/switch/src/index.less
@@ -69,7 +69,7 @@
         left: ~'calc(100% - 18px - @{switch-padding})';
     }
 
-    &.ant-switch-small.osui-switch.ant-switch-checked .ant-switch-handle {
+    &.@{ant-prefix}-switch-small.osui-switch.@{ant-prefix}-switch-checked .@{ant-prefix}-switch-handle {
         left: ~'calc(100% - 12px - @{switch-padding})';
     }
 }
