fix: Modal footer错位问题修复
Change-Id: I34abbb5693c90e264e350363ef240883834ea1f3

--- a/packages/ui/button/src/index.less
+++ b/packages/ui/button/src/index.less
@@ -187,6 +187,10 @@
     &.@{ant-prefix}-btn-primary {
         box-shadow: none;
     }
+
+    &.@{ant-prefix}-btn::before {
+        opacity: 0;
+    }
 }
 
 // 仅icon形式
