fix: searchIcon替换, 主题变量调整
Change-Id: I5174adecff2bfd5f631dba512d65ba32f7f5a671

--- a/packages/ui-theme/icloud-theme/patches/antd-vars-patch.less
+++ b/packages/ui-theme/icloud-theme/patches/antd-vars-patch.less
@@ -81,6 +81,7 @@
 @input-placeholder-color: var(--theme-placeholder-color);
 @input-disabled-bg: var(--theme-disabled-bg);
 @input-addon-bg: var(--color-gray-3);
+@input-padding-horizontal: 8px;
 
 // Table
 // ---
