--- a/packages/ui/auto-complete/src/index.less
+++ b/packages/ui/auto-complete/src/index.less
@@ -10,4 +10,9 @@
             background-color: var(--color-gray-4);
         }
     }
+
+    // 修复 select item 不居中
+    .@{ant-prefix}-select-item {
+        line-height: 22px;
+    }
 }
