--- a/packages/ui/message/src/index.less
+++ b/packages/ui/message/src/index.less
@@ -1,6 +1,26 @@
 /* stylelint-disable no-duplicate-selectors */
 @osui-message-class-prefix: osui-message;
 
+.@{ant-prefix}-message {
+    .@{osui-message-class-prefix}:first-child {
+        margin-top: var(--message-margin-top);
+    }
+}
+
+@keyframes MessageMoveOut {
+    0% {
+        max-height: 150px;
+        padding: var(--message-content-padding);
+        opacity: 1;
+    }
+
+    100% {
+        max-height: 0;
+        padding: 0;
+        opacity: 0;
+    }
+}
+
 .@{osui-message-class-prefix} {
     padding: var(--message-content-padding);
 
