--- a/packages/ui/empty/src/index.less
+++ b/packages/ui/empty/src/index.less
@@ -1,19 +1,25 @@
 @osui-empty-class-prefix: osui-empty;
 
-.@{osui-empty-class-prefix}-small {
+.@{osui-empty-class-prefix},
+.@{osui-empty-class-prefix}-large {
     .@{ant-prefix}-empty-image {
-        height: 70px;
-        margin-bottom: 10px;
+        margin-bottom: 20px;
 
         svg {
-            width: 80px;
+            min-width: 120px;
+            max-width: 180px;
+            height: 100%;
         }
     }
 }
 
-.@{osui-empty-class-prefix}-large {
+.@{osui-empty-class-prefix}-small {
     .@{ant-prefix}-empty-image {
-        height: 362px;
-        margin-bottom: 20px;
+        height: 50px;
+        margin-bottom: 10px;
+
+        svg {
+            width: 70px;
+        }
     }
 }
