--- a/packages/ui-theme/icloud-theme/patches/antd-vars-patch.less
+++ b/packages/ui-theme/icloud-theme/patches/antd-vars-patch.less
@@ -272,11 +272,13 @@
 
 // Slider
 // ---
-@slider-handle-border-width: 1px;
+@slider-handle-border-width: 4px;
+@slider-handle-size: 12px;
 @slider-trace-background-color: var(--theme-primary-color);
 @slider-trace-background-color-hover: var(--theme-primary-color-hover);
-@slider-rail-background-color: var(--color-brand-1);
-@slider-rail-background-color-hover: var(--color-brand-1);
+@slider-rail-background-color: var(--color-gray-4);
+@slider-rail-background-color-hover: var(--color-gray-4);
+@slider-disabled-color: var(--theme-disabled-color);
 
 // Cascader
 // ---
