--- a/packages/ui/slider/src/index.less
+++ b/packages/ui/slider/src/index.less
@@ -11,8 +11,32 @@
                 box-shadow: none;
             }
         }
-    }
+        // 调整分步的slider
+        &:not(.osui-slider-icloud) {
+            &:not(.@{ant-prefix}-slider-disabled) {
+                // hover的效果要排除disabled
+                .@{ant-prefix}-slider-dot {
+                    &:hover {
+                        width: 12px;
+                        height: 12px;
+                        margin-top: -3px;
+                        background: #fff;
+                        border: 4px solid var(--theme-primary-color);
+                        transform: translateX(-17%);
+                    }
+                }
+            }
 
+            .@{ant-prefix}-slider-dot {
+                border: 4px solid var(--theme-border-color-split);
+
+                &-active {
+                    border: 4px solid var(--theme-primary-color);
+                }
+            }
+        }
+    }
+    // 对icloud样式的调整
     &-icloud {
         &.@{ant-prefix}-slider.@{ant-prefix}-slider-disabled {
             .@{ant-prefix}-slider-rail {
@@ -63,6 +87,7 @@
                 width: 12px;
                 height: 20px;
                 background-color: var(--theme-primary-color);
+                border: 1px solid var(--theme-primary-color);
                 border-radius: 0;
             }
         }
